<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.product.fragment.PaymentDetailsFragment"
    android:background="@color/blank">



    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/civil_id"
        android:textSize="@dimen/medium_title"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginStart="@dimen/margin_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/etPaymentID"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_48"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@drawable/button_solid_background"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:padding="@dimen/margin_8"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvId"/>


    <TextView
        android:id="@+id/tvDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chipping_information"
        android:textSize="@dimen/medium_title"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginStart="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@id/etPaymentID"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/etCity"
        android:layout_width="120dp"
        android:layout_height="@dimen/margin_48"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/button_solid_background"
        android:backgroundTint="@color/gray"
        android:hint="@string/city"
        android:gravity="center"
        android:inputType="text"
        android:padding="@dimen/margin_8"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDelivery" />


    <EditText
        android:id="@+id/etBuildingNumber"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_48"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/button_solid_background"
        android:backgroundTint="@color/gray"
        android:gravity="center"
        android:hint="@string/bulding_number"
        android:inputType="number"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/etCity"
        app:layout_constraintTop_toBottomOf="@id/tvDelivery" />


    <EditText
        android:id="@+id/etFloorNum"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_48"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/button_solid_background"
        android:backgroundTint="@color/gray"
        android:hint="@string/floor_num"
        android:gravity="center"
        android:inputType="number"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16"

        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCity" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinuePayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:textAllCaps="false"
        android:textSize="@dimen/medium_title"
        android:textColor="@color/white"
        android:background="@drawable/button_solid_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_32"/>

</androidx.constraintlayout.widget.ConstraintLayout>