<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.userType.UserTypeActivity">


        <LinearLayout
            android:id="@+id/linearSignUp"
            android:background="@drawable/oval_background"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <ImageView
                android:id="@+id/ivAppIcon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_game_icon"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16"
                />



            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/large_title"
                android:layout_gravity="center"
                android:textStyle="bold"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/color1"
            android:layout_marginTop="@dimen/margin_32"
            android:textSize="@dimen/large_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearSignUp"  />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="@dimen/margin_32"
            android:background="@drawable/button_solid_background"
            android:text="@string/customer"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="@dimen/large_title"
            android:textColor="@color/black"
            android:layout_margin="@dimen/margin_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnToLogin"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToSeller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/button_solid_background"
            android:text="@string/seller"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOr" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
