<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.product.fragment.PayFragment">


        <TextView
            android:id="@+id/tvPaymentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:text="@string/payment_by_knet"
            android:textColor="@color/black"
            android:textSize="@dimen/large_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cvVisa"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="@dimen/margin_16"
            app:cardCornerRadius="@dimen/margin_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPaymentTitle">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/visa_image" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tvCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_32"
            android:text="@string/card_number"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvVisa" />


        <EditText
            android:id="@+id/etCardNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/button_solid_background"
            android:backgroundTint="@color/gray"
            android:inputType="number"
            android:padding="@dimen/margin_8"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCard" />


        <TextView
            android:id="@+id/tvExpirationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_32"
            android:text="@string/exppiration_date"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCardNumber" />




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMonth"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@color/gray"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_8"
            android:text="@string/mm"
            android:drawableEnd="@drawable/ic_arrow_down"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvExpirationDate"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYear"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@color/gray"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_8"
            android:text="@string/yyyy"
            android:drawableEnd="@drawable/ic_arrow_down"
            app:layout_constraintStart_toEndOf="@id/btnMonth"
            app:layout_constraintTop_toBottomOf="@id/tvExpirationDate"/>


        <TextView
            android:id="@+id/tvPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_32"
            android:text="@string/pin"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnMonth" />


        <EditText
            android:id="@+id/etPinNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/button_solid_background"
            android:backgroundTint="@color/gray"
            android:inputType="number"
            android:padding="@dimen/margin_8"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPayNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_32"
            android:background="@drawable/button_solid_background"
            android:text="@string/pay_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
