<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signup.SignUpActivity">


        <LinearLayout
            android:id="@+id/linearSignUp"
            android:background="@drawable/oval_background"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <ImageView
                android:id="@+id/ivAppIcon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_game_icon"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16"
                />



            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/large_title"
                android:layout_gravity="center"
                android:textStyle="bold"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textColor="@color/color1"
            android:layout_marginTop="@dimen/margin_16"
            android:textSize="@dimen/large_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearSignUp"  />


        <EditText
            android:id="@+id/etEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:textColorHint="@color/color1"
            android:background="@drawable/border_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp"/>


        <EditText
            android:id="@+id/etNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="@color/color1"
            android:background="@drawable/border_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmailSignUp"/>


        <EditText
            android:id="@+id/etPhoneSignUp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColorHint="@color/color1"
            android:background="@drawable/border_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNameSignUp"/>

        <EditText
            android:id="@+id/etPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/color1"
            android:background="@drawable/border_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPhoneSignUp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_32"
            android:background="@drawable/button_solid_background"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvHaveAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordSignUp" />

        <TextView
            android:id="@+id/tvHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_32"
            android:layout_marginBottom="28dp"
            android:text="@string/have_an_account"
            android:textColor="@color/color1"
            android:textSize="@dimen/large_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <ProgressBar
            android:id="@+id/pbSignUp"
            android:layout_width="@dimen/margin_48"
            android:layout_height="@dimen/margin_48"
            android:visibility="invisible"
            android:progressTint="@color/color1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
