<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp"
    android:layout_margin="@dimen/margin_8"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_16">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CD Fifa"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/tvProductYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_of_parchase"
            android:layout_marginTop="@dimen/margin_16"
            app:drawableStartCompat="@drawable/dot_background"
            android:drawablePadding="@dimen/margin_8"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_title"
            app:layout_constraintTop_toBottomOf="@id/tvProductName"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginTop="@dimen/margin_8"
            app:drawableStartCompat="@drawable/dot_background"
            android:drawablePadding="@dimen/margin_8"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_title"
            app:layout_constraintTop_toBottomOf="@id/tvProductYear"
            app:layout_constraintStart_toStartOf="parent"/>



        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivProductImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            app:riv_corner_radius="4dip"
            android:src="@drawable/product_1"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintTop_toBottomOf="@id/tvProductPrice"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContactHim"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/contact_him"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/margin_8"
            app:layout_constraintEnd_toStartOf="@id/btnBuyNow"
            android:background="@drawable/border_background"
            app:layout_constraintTop_toBottomOf="@id/ivProductImage"
            app:layout_constraintStart_toStartOf="@id/ivProductImage"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBuyNow"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@drawable/button_solid_background"
            android:text="@string/buy_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintEnd_toEndOf="@+id/ivProductImage"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/btnContactHim"
            app:layout_constraintTop_toBottomOf="@id/ivProductImage" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>